# wacontrol

./: AUTHORS  ChangeLog  Makefile.am  acinclude.m4  bootstrap  configure.ac
src/: Makefile.am  WACApplication.cc  WACApplication.h  appconfig.cc  appconfig.h  main.cc  main.h  pch.cc  pch.h
win32/: MyMessageLoop.cc  MyMessageLoop.h  ShellNotifyIcon.h  common.h  wacontrol.sln
win32/wacontrol/: AboutDlg.cc  ConnectDlg.cc  ConnectDlg.h  LoadPlaylistDlg.cc  LoadPlaylistDlg.h  MainDlg.cc  MainDlg.h  SysTrayIcon.cc  SysTrayIcon.h  WACApplication.cc  WACApplication.h  config.cc  config.h  main.cc  main.h  pch.h  resource.h  wacontrol.aps  wacontrol.rc  wacontrol.vcproj
win32/wacontrol/res/: wacontrol.exe.manifest
win32/wacontrold/: AboutDlg.h  MainDlg.cc  MainDlg.h  WACDApplication.cc  WACDApplication.h  WinAmpControl.cc  WinAmpControl.h  config.cc  config.h  main.cc  main.h  messages.h  pch.cc  pch.h  resource.h  wacontrold.aps  wacontrold.rc  wacontrold.vcproj
win32/wacontrold/res/: wacontrold.exe.manifest
